gcc/testsuite/rust/rustc/ui/consts/const-eval/issue-70723.rs
static _X: () = loop {}; // { dg-error ".E0080." "" { target *-*-* } }

fn main() {}

